# tai-backend-arq

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  tai-plugin.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/tai42_backend_arq/: __init__.py  backend.py  callback.py  extensions.py  lifecycle.py  pool.py  records.py  scheduler.py  settings.py  signatures.py  tasks.py  tools.py  worker.py
src/tai_backend_arq/: __init__.py  backend.py  callback.py  extensions.py  lifecycle.py  pool.py  records.py  scheduler.py  settings.py  signatures.py  tai-plugin.yml  tasks.py  tools.py  worker.py
tests/: conftest.py  test_extensions.py  test_import_graph.py  test_plugin_spec.py  test_records_settings_pool.py  test_registration.py  test_schedule_backup.py  test_scheduler.py  test_signatures.py  test_task_result.py  test_tasks_and_callback.py  test_tools_arq.py  test_worker_and_launch.py  test_worker_bus_coexistence.py
