[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tai-backend-arq"
version = "0.1.0"
description = "arq execution backend for the TAI ecosystem — worker runtime and Redis-hash scheduling over arq."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "tai42", email = "oss@tai42.ai" },
]
keywords = ["mcp", "backend", "arq", "redis", "scheduler", "tai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # The pure interface contract — the Backend ABC, CallbackSchema, the
    # Manifest model, and the tai_app handle the plugin registers through.
    "tai-contract>=0.1,<0.2",
    # TaiBaseSettings + settings cache, schedule normalization, signature
    # helpers; the jq extra backs the callback condition/expression evaluation.
    "tai-kit[jq]>=0.1,<0.2",
    # The broker SDK: worker runtime, ArqRedis pool, Job status/result API.
    "arq~=0.28.0",
    # Crontab iteration for the Redis-hash scheduler.
    "croniter~=6.2.2",
    # Job/schedule payload (de)serialization.
    "orjson~=3.11.8",
    # Presents the extension branch tools with real composed signatures.
    "makefun~=1.16.0",
    # Detecting/stripping the FastMCP request-context parameter in the
    # signature helpers (fastmcp is the platform's tool substrate).
    "fastmcp>=3.2",
    # CLI arg parsing for the worker launch (same option surface as `arq worker`).
    "click>=8",
    # SettingsConfigDict / to_jsonable_python used directly by settings + tasks.
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    # ``to_jsonable_python`` for the job payload encoding; imported directly,
    # so declared directly rather than leaned on as a pydantic transitive.
    "pydantic-core>=2",
]

[project.urls]
Homepage = "https://tai42.ai"
Repository = "https://github.com/tai42ai/tai-backend-arq"
Issues = "https://github.com/tai42ai/tai-backend-arq/issues"
Changelog = "https://github.com/tai42ai/tai-backend-arq/blob/main/CHANGELOG.md"

[dependency-groups]
# PEP 735 dev group — installed by default on `uv sync`, so the gate
# `uv sync && uv run pytest && uv run ruff check . && uv run pyright` runs clean.
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.389",
    # The plugin-spec test parses tai-plugin.yml.
    "pyyaml>=6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tai_backend_arq*"]

[tool.setuptools.package-data]
tai_backend_arq = ["py.typed", "tai-plugin.yml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
xfail_strict = true
# Turn warnings into errors so a real defect that only surfaces as a warning
# (e.g. a missing await -> "coroutine was never awaited") fails the suite loudly
# instead of passing green.
filterwarnings = ["error"]

[tool.coverage.run]
source = ["tai_backend_arq"]

[tool.coverage.report]
fail_under = 97

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PIE", "PT", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tai_skeleton".msg = "An execution backend sits below the skeleton: it never imports tai-skeleton."

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
